<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_new_item"
        android:icon="@drawable/ic_add_item"
        android:title="@string/action_new_item"
        app:showAsAction="ifRoom" />

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_delete_all_items"
        android:title="@string/action_delete_all_items"
        app:showAsAction="never" />

    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_main_help"
        android:title="@string/action_help"
        app:showAsAction="never" />


</menu>
