<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Save action button -->
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <!-- Share action button -->
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <!-- Delete action button -->
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <!-- Help action button -->
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
