<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_view_banner" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:columnCount="2"
            android:rowCount="4" >

            <ImageView
                android:id="@+id/foodItemImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:layout_gravity="start|top"
                android:layout_margin="15dp"
                android:layout_row="0"
                android:layout_rowSpan="4"
                android:background="@drawable/imageview_border"
                android:clickable="true"
                android:hint="Tap to add a picture!"
                android:onClick="selectImage"
                android:tag="" />

            <EditText
                android:id="@+id/foodItemNameEditText"
                android:hint="@string/food_item_name"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="15dp"
                android:layout_column="1"
                android:layout_row="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="@color/detailed_view_hint_text"
                android:textColor="@color/detailed_view_food_name"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:imeOptions="actionDone" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/foodItemLocationEditText"
                android:layout_gravity="start|center_vertical"
                android:layout_column="1"
                android:layout_row="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/food_item_location"
                android:textColorHint="@color/detailed_view_hint_text"
                android:textColor="@color/detailed_view_food_location"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:imeOptions="actionDone" />

            <RatingBar
                android:id="@+id/foodItemRatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_gravity="start|center_vertical"
                android:layout_column="1"
                android:layout_row="2" />

            <CheckBox
                android:id="@+id/foodItemEatenCheckBox"
                android:layout_gravity="start|center_vertical"
                android:layout_column="1"
                android:layout_row="3"
                android:checked="false"
                android:text="Eaten"
                android:textColor="@color/detailed_view_food_location" />

        </GridLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Spinner
            android:id="@+id/foodTypeSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="@android:color/transparent" >

        </Spinner>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15" >

        <EditText
            android:id="@+id/foodItemReviewEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_review_hint"
            android:inputType="textCapSentences"
            android:maxLength="200"
            android:scrollHorizontally="false"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone" >

        </EditText>

    </TableRow>

</TableLayout>
